# hackerrank

./: flake.nix  hackerrank.cabal
1_warmup/: 2_counting-valleys.hs  3_jumping-on-the-clouds.hs  4_repeated-string.hs
2_arrays/: 1_2d-array.hs
src/: template.hs
src/1_warmup/: 1_sock-merchant.hs
